fix issue of overflow of adminPOpUp

--- a/app/client/src/scss/auth.scss
+++ b/app/client/src/scss/auth.scss
@@ -5,6 +5,8 @@
     @include center-styles;
     height: 100vh;
     width: 100vw;
+    background: white;
+    color: black;
     .verification {
         @include center-columns;
         justify-content: space-around;
